--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <div class="box7"><img src="./blog/Rectangle 19 (2).png" alt="фотка"> </div>
                         <div class="box8">
                             <p class="blog-title">Как подготовиться к путешествию в одиночку?</p>
-                            <p class="blog-text">Для современного мира базовый вектор развития предполагает.</p>
+                            <p class="blog-text">Для современного мира базовый вектор развития предполагает независимые способы реализации соответствующих условий активизации.</p>
                             <div>
                                 <p class="title">01/04/2023</p>
                                 <p class="short">читать статью</p>
@@ -202,7 +202,7 @@
                         <div class="box9"><img src="./blog/Rectangle 19 (1).png" alt="фотка">  </div>
                         <div class="box10">
                             <p class="blog-title">Долой сомнения! Весь мир открыт для вас! </p>
-                            <p class="blog-text">Для современного мира базовый вектор развития предполагает независимые способы реализации соответствующих условий активизации ... независимые способы реализации соответствующих условий активизации ...</p>
+                            <p class="blog-text">Для современного мира базовый вектор развития предполагает независимые способы реализации соответствующих условий активизации.</p>
                             <div>
                                 <p class="title">01/04/2023</p>
                                 <p class="short">читать статью</p>
@@ -211,7 +211,7 @@
                         <div class="box11"> <img src="./blog/Rectangle 19 (3).png" alt="фотка"></div>
                         <div class="box12"> 
                             <p class="blog-title">Индия ... летим?</p>
-                            <p class="blog-text">Для современного мира базовый.</p>
+                            <p class="blog-text">Для современного мира базовый вектор развития предполагает независимые способы реализации соответствующих условий активизации.</p>
                             <div>
                                 <p class="title">01/04/2023</p>
                                 <p class="short">читать статью</p>
