--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 </div>
             </div>
         </section>
-        <section class="whute-theme">
+        <section class="theme">
             <div class="container">
                 <div id="impressions" class="impressions">
                     <p class="title">фото-отчет</p>
@@ -238,25 +238,25 @@
                         <button class="home-btn">Наш pinterest</button>
                 </div>
             </div>
+            <div id="footer" class="mail">
+                <div class="mail-div">
+                    <p class="title">актуально</p>
+                    <h4>Получайте полезные рассылки о путешествиях</h4>
+                </div>
+                <div>
+                    <div class="form">
+                        <fieldset>
+                            <label for="email">Введите e-mail адрес</label>
+                            <input class="email" type="email" id="email" name="email" placeholder="name@domain.com"/>
+                        </fieldset>
+                        <button id="form-btn" class="home-btn">Подписаться на новости</button>
+                    </div>
+                    <p class="small-text">подписываясь на новости, вы автоматически соглашаетесь с <span>условиями обработки персональных данных</span> и <span>правилами рекламных рассылок</span></p>
+                </div>
+            </div>
         </section>
         <section class="dark">
             <div class="container">
-                <div id="footer" class="mail">
-                    <div class="mail-div">
-                        <p class="title">актуально</p>
-                        <h4>Получайте полезные рассылки о путешествиях</h4>
-                    </div>
-                    <div>
-                        <div class="form">
-                            <fieldset>
-                                <label for="email">Введите e-mail адрес</label>
-                                <input class="email" type="email" id="email" name="email" placeholder="name@domain.com"/>
-                            </fieldset>
-                            <button class="home-btn">Подписаться на новости</button>
-                        </div>
-                        <p class="small-text">подписываясь на новости, вы автоматически соглашаетесь с <span>условиями обработки персональных данных</span> и <span>правилами рекламных рассылок</span></p>
-                    </div>
-                </div>
                 <div class="links">
                     <div>
                         <div>
