--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -167,6 +166,12 @@
                         </a>
                         
                       </div>
+                      <div class="parent2">
+                        <div class="div11"> </div>
+                        <div class="div22"><img src="./popular/фоновое изображение.png" alt="img"> </div>
+                        <div class="div33"><img src="./popular/фоновое изображение (1).png" alt="img"> </div>
+                        <div class="div44"> <img src="./popular/фоновое изображение (2).png" alt="img"></div>
+                        </div>
                       <button class="home-btn">Рейтинг направлений</button>
                 </div>
             </div>
@@ -235,7 +240,7 @@
                         <div class="photo5"> <img src="./impressions/Rectangle 22.png" alt="фото"></div>
                         <div class="photo6"> <img src="./impressions/Rectangle 25.png" alt="фото"></div>
                         </div>
-                        <button class="home-btn">Наш pinterest</button>
+                        <button id="mobile-btn" class="home-btn">Наш pinterest</button>
                 </div>
             </div>
             <div id="footer" class="mail">
