--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         <div>
                             <p class="foot-title">Компания «РумТибет»</p>
                             <p class="foot-text">Его корни уходят в один фрагмент классической латыни 45 года н.э., то есть более двух тысячелетий назад. Ричард МакКлинток, профессор латыни из колледжа Hampden-Sydney.</p>
-                            <p class="number">info@domain.com&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;+7 (123) 456-78-90</p>
+                            <p class="number">info@domain.com&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;+7 (123) 456-78-90</p>
                             <div class="icons-2">
                                 <img src="./links/Vector.png" alt="icon">
                                 <img src="./links/Vector (1).png" alt="icon">
