--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                     <p class="text-2">Для современного мира базовый вектор развития предполагает независимые способы реализации соответствующих условий активизации.</p>
                                 </div>
                             </div>
-                            <button class="home-btn">Стоимость программ</button>
+                            <button id="offer-btn" class="home-btn">Стоимость программ</button>
                         </div>
                             </div>
                         </div>
