--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                         </ul>
                     </div>
                     <ul id="nav" class="nav">
-                        <li>&gt;&emsp;<a href="#labor">Про гида</a></li>
-                        <li>&gt;&emsp;<a href="#offer">Программа труда</a></li>
-                        <li>&gt;&emsp;<a href="#popular">Стоимость</a></li>
-                        <li>&gt;&emsp;<a href="#blog">Блог</a></li>
-                        <li>&gt;&emsp;<a href="#footer">Контакты</a></li>
+                        <li>&gt;&emsp;<a class="navlink" href="#labor">Про гида</a></li>
+                        <li>&gt;&emsp;<a class="navlink" href="#offer">Программа труда</a></li>
+                        <li>&gt;&emsp;<a class="navlink" href="#popular">Стоимость</a></li>
+                        <li>&gt;&emsp;<a class="navlink" href="#blog">Блог</a></li>
+                        <li>&gt;&emsp;<a class="navlink" href="#footer">Контакты</a></li>
                     </ul>
                     <div id="nav-btn" class="nav-button">
                         <img id="nav-btn-img" src="./home/nav-open.svg" alt="nav">
