--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <main>
         <section class="white-theme">
             <div class="container">
-                    <div id="labor" class="labor" data-aos="fade-up-right">
+                    <div id="labor" class="labor" data-aos="zoom-in">
                         <div class="item1"> </div>
                         <div class="item2"> <img src="./labor/Rectangle 5.png" alt="картинка"></div>
                         <div class="item3"> <img src="./labor/Rectangle 4.png" alt="картинка"></div>
@@ -81,7 +81,7 @@
         </section>
         <section class="back-theme">
             <div class="container">
-                    <div id="offer" class="offer" data-aos="fade-up-left">
+                    <div id="offer" class="offer" data-aos="flip-left">
                         <div class="div1"><img src="./offer/Rectangle 8.png" alt="фотка"> </div>
                         <div class="div2"><img src="./offer/Rectangle 9.png" alt="фотка"> </div>
                         <div class="div3"><img src="./offer/Rectangle 10.png" alt="фотка"> </div>
@@ -120,9 +120,7 @@
         </section>
         <section class="white-theme">
             <div class="container">
-                <div id="popular" class="popular" data-aos="fade-right"
-                data-aos-offset="300"
-                data-aos-easing="ease-in-sine">
+                <div id="popular" class="popular" data-aos="zoom-out-right">
                     <p id="title" class="title">по версии отдыхающих</p>
                     <h2>Популярные направления</h2>
                     <div class="card-grid">
